<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/tableNo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/tNo" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/menu" />

    <TextView
        android:id="@+id/size"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/size" />

    <TextView
        android:id="@+id/count"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/count" />

</LinearLayout>