<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#3E2723" >

        <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity = "center"
        android:padding = "5dp"
        android:text = "@string/tNo"
        android:textColor = "#ffffff"/>

        <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:gravity = "center"
        android:padding = "5dp"
        android:text="@string/menu"
        android:textColor = "#ffffff"/>

        <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity = "center"
        android:padding = "5dp"
        android:text = "@string/size"
        android:textColor = "#ffffff"/>

        <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity = "center"
        android:padding = "5dp"
        android:text = "@string/count"
        android:textColor = "#ffffff"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null">

    </ListView>

</LinearLayout>
