<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login_Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E2723"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView_id"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/textView_pwd"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView_pwd"
        android:layout_marginTop="53dp"
        android:text="@string/user"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editText_ID"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="390dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/textView_id"
        android:layout_alignLeft="@+id/editText_PWD"
        android:layout_alignStart="@+id/editText_PWD"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="text"
        android:textColor="@android:color/black"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView_pwd"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignTop="@+id/editText_PWD"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_toLeftOf="@+id/editText_ID"
        android:layout_toStartOf="@+id/editText_ID"
        android:text="@string/user_pwd"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editText_PWD"
        android:layout_width="390dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button"
        android:layout_centerVertical="true"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/user_pwd_enter"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="160dp"
        android:layout_height="70.5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        android:text="@string/button_login"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/black"
        android:visibility="visible"
        tools:targetApi="lollipop" />

</RelativeLayout>